--- a/app-comercio/api/package.json
+++ b/app-comercio/api/package.json
@@ -5,23 +5,29 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon start"
+    "start": "nodemon app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "oscar",
   "license": "ISC",
-  "dependencies": {
-    "@slack/webhook": "^6.1.0",
+  "devDependencies": {
+    "@slack/webhook": "^7.0.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "express-validator": "^7.0.1",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
+    "mongoose-delete": "^1.0.2",
     "morgan-body": "^2.6.9",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.22",
-    "sequelize": "^6.31.1"
+    "mysql2": "^3.9.2",
+    "nodemon": "^3.1.0",
+    "sequelize": "^6.37.1"
+  },
+  "dependencies": {
+    "mongodb": "^6.5.0",
+    "mongoose-connect": "^0.0.3"
   }
 }
