--- a/app-comercio/api/package.json
+++ b/app-comercio/api/package.json
@@ -4,30 +4,33 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "test": "jest --forceExit",
+    "start": "nodemon start"
   },
   "keywords": [],
-  "author": "oscar",
+  "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "@slack/webhook": "^7.0.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "dotenv": "^16.4.4",
+    "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.4",
+    "mongoose": "^8.1.2",
     "mongoose-delete": "^1.0.2",
     "morgan-body": "^2.6.9",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.2",
-    "nodemon": "^3.1.0",
-    "sequelize": "^6.37.1"
+    "nodemon": "^3.0.3",
+    "sequelize": "^6.37.1",
+    "slack": "^11.0.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
-  "dependencies": {
-    "mongodb": "^6.5.0",
-    "mongoose-connect": "^0.0.3"
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   }
 }
