--- a/app-comercio/api/package.json
+++ b/app-comercio/api/package.json
@@ -14,6 +14,7 @@
     "@slack/webhook": "^7.0.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "discord-webhook-node": "^1.1.8",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
